src/pydjinni/parser/grammar/IdlParser.py
# Generated from Idl.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IdlParser ( Parser ):

    grammarFileName = "Idl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@import'", "'@extern'", "'namespace'", 
                     "'enum'", "'flags'", "'static'", "'const'", "'main'", 
                     "'interface'", "'record'", "'deriving'", "'function'", 
                     "'readonly'", "'async'", "'error'", "'throws'", "'->'", 
                     "'?'", "'='", "':'", "'('", "')'", "'{'", "'}'", "'>'", 
                     "'<'", "';'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "IMPORT", "EXTERN", "NAMESPACE", "ENUM", 
                      "FLAGS", "STATIC", "CONST", "MAIN", "INTERFACE", "RECORD", 
                      "DERIVING", "FUNCTION", "READONLY", "ASYNC", "ERROR", 
                      "THROWS", "ARROW", "OPTIONAL", "ASSIGN", "COLON", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "GT", "LT", 
                      "SEMI", "COMMA", "DOT", "FILEPATH", "TARGET", "COMMENT", 
                      "WS", "ID", "NS_ID" ]

    RULE_idl = 0
    RULE_load = 1
    RULE_comment = 2
    RULE_importDef = 3
    RULE_extern = 4
    RULE_filepath = 5
    RULE_namespace = 6
    RULE_namespaceContent = 7
    RULE_typeDecl = 8
    RULE_enum = 9
    RULE_item = 10
    RULE_flags = 11
    RULE_flag = 12
    RULE_modifier = 13
    RULE_record = 14
    RULE_field = 15
    RULE_typeRef = 16
    RULE_dataType = 17
    RULE_function = 18
    RULE_throwing = 19
    RULE_targets = 20
    RULE_parameter = 21
    RULE_deriving = 22
    RULE_declaration = 23
    RULE_interface = 24
    RULE_namedFunction = 25
    RULE_method = 26
    RULE_errorDomain = 27
    RULE_errorCode = 28
    RULE_property = 29
    RULE_identifier = 30
    RULE_nsIdentifier = 31

    ruleNames =  [ "idl", "load", "comment", "importDef", "extern", "filepath", 
                   "namespace", "namespaceContent", "typeDecl", "enum", 
                   "item", "flags", "flag", "modifier", "record", "field", 
                   "typeRef", "dataType", "function", "throwing", "targets", 
                   "parameter", "deriving", "declaration", "interface", 
                   "namedFunction", "method", "errorDomain", "errorCode", 
                   "property", "identifier", "nsIdentifier" ]

    EOF = Token.EOF
    IMPORT=1
    EXTERN=2
    NAMESPACE=3
    ENUM=4
    FLAGS=5
    STATIC=6
    CONST=7
    MAIN=8
    INTERFACE=9
    RECORD=10
    DERIVING=11
    FUNCTION=12
    READONLY=13
    ASYNC=14
    ERROR=15
    THROWS=16
    ARROW=17
    OPTIONAL=18
    ASSIGN=19
    COLON=20
    LPAREN=21
    RPAREN=22
    LBRACE=23
    RBRACE=24
    GT=25
    LT=26
    SEMI=27
    COMMA=28
    DOT=29
    FILEPATH=30
    TARGET=31
    COMMENT=32
    WS=33
    ID=34
    NS_ID=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class IdlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(IdlParser.EOF, 0)

        def load(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IdlParser.LoadContext)
            else:
                return self.getTypedRuleContext(IdlParser.LoadContext,i)


        def namespaceContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IdlParser.NamespaceContentContext)
            else:
                return self.getTypedRuleContext(IdlParser.NamespaceContentContext,i)


        def getRuleIndex(self):
            return IdlParser.RULE_idl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdl" ):
                return visitor.visitIdl(self)
            else:
                return visitor.visitChildren(self)




    def idl(self):

        localctx = IdlParser.IdlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_idl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==2:
                self.state = 64
                self.load()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 21474836488) != 0):
                self.state = 70
                self.namespaceContent()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(IdlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importDef(self):
            return self.getTypedRuleContext(IdlParser.ImportDefContext,0)


        def extern(self):
            return self.getTypedRuleContext(IdlParser.ExternContext,0)


        def getRuleIndex(self):
            return IdlParser.RULE_load

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoad" ):
                return visitor.visitLoad(self)
            else:
                return visitor.visitChildren(self)




    def load(self):

        localctx = IdlParser.LoadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_load)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.importDef()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.extern()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(IdlParser.COMMENT)
            else:
                return self.getToken(IdlParser.COMMENT, i)

        def getRuleIndex(self):
            return IdlParser.RULE_comment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = IdlParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.match(IdlParser.COMMENT)
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(IdlParser.IMPORT, 0)

        def filepath(self):
            return self.getTypedRuleContext(IdlParser.FilepathContext,0)


        def getRuleIndex(self):
            return IdlParser.RULE_importDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDef" ):
                return visitor.visitImportDef(self)
            else:
                return visitor.visitChildren(self)




    def importDef(self):

        localctx = IdlParser.ImportDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(IdlParser.IMPORT)
            self.state = 88
            self.filepath()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXTERN(self):
            return self.getToken(IdlParser.EXTERN, 0)

        def filepath(self):
            return self.getTypedRuleContext(IdlParser.FilepathContext,0)


        def getRuleIndex(self):
            return IdlParser.RULE_extern

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtern" ):
                return visitor.visitExtern(self)
            else:
                return visitor.visitChildren(self)




    def extern(self):

        localctx = IdlParser.ExternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_extern)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(IdlParser.EXTERN)
            self.state = 91
            self.filepath()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilepathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FILEPATH(self):
            return self.getToken(IdlParser.FILEPATH, 0)

        def getRuleIndex(self):
            return IdlParser.RULE_filepath

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilepath" ):
                return visitor.visitFilepath(self)
            else:
                return visitor.visitChildren(self)




    def filepath(self):

        localctx = IdlParser.FilepathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_filepath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(IdlParser.FILEPATH)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAMESPACE(self):
            return self.getToken(IdlParser.NAMESPACE, 0)

        def nsIdentifier(self):
            return self.getTypedRuleContext(IdlParser.NsIdentifierContext,0)


        def LBRACE(self):
            return self.getToken(IdlParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(IdlParser.RBRACE, 0)

        def comment(self):
            return self.getTypedRuleContext(IdlParser.CommentContext,0)


        def namespaceContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IdlParser.NamespaceContentContext)
            else:
                return self.getTypedRuleContext(IdlParser.NamespaceContentContext,i)


        def getRuleIndex(self):
            return IdlParser.RULE_namespace

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamespace" ):
                return visitor.visitNamespace(self)
            else:
                return visitor.visitChildren(self)




    def namespace(self):

        localctx = IdlParser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_namespace)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 95
                self.comment()


            self.state = 98
            self.match(IdlParser.NAMESPACE)
            self.state = 99
            self.nsIdentifier()
            self.state = 100
            self.match(IdlParser.LBRACE)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 21474836488) != 0):
                self.state = 101
                self.namespaceContent()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(IdlParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeDecl(self):
            return self.getTypedRuleContext(IdlParser.TypeDeclContext,0)


        def namespace(self):
            return self.getTypedRuleContext(IdlParser.NamespaceContext,0)


        def getRuleIndex(self):
            return IdlParser.RULE_namespaceContent

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamespaceContent" ):
                return visitor.visitNamespaceContent(self)
            else:
                return visitor.visitChildren(self)




    def namespaceContent(self):

        localctx = IdlParser.NamespaceContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_namespaceContent)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.typeDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.namespace()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def enum(self):
            return self.getTypedRuleContext(IdlParser.EnumContext,0)


        def flags(self):
            return self.getTypedRuleContext(IdlParser.FlagsContext,0)


        def record(self):
            return self.getTypedRuleContext(IdlParser.RecordContext,0)


        def interface(self):
            return self.getTypedRuleContext(IdlParser.InterfaceContext,0)


        def namedFunction(self):
            return self.getTypedRuleContext(IdlParser.NamedFunctionContext,0)


        def errorDomain(self):
            return self.getTypedRuleContext(IdlParser.ErrorDomainContext,0)


        def getRuleIndex(self):
            return IdlParser.RULE_typeDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDecl" ):
                return visitor.visitTypeDecl(self)
            else:
                return visitor.visitChildren(self)




    def typeDecl(self):

        localctx = IdlParser.TypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typeDecl)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.enum()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.flags()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.record()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.interface()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.namedFunction()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 118
                self.errorDomain()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(IdlParser.IdentifierContext,0)


        def ASSIGN(self):
            return self.getToken(IdlParser.ASSIGN, 0)

        def ENUM(self):
            return self.getToken(IdlParser.ENUM, 0)

        def LBRACE(self):
            return self.getToken(IdlParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(IdlParser.RBRACE, 0)

        def comment(self):
            return self.getTypedRuleContext(IdlParser.CommentContext,0)


        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IdlParser.ItemContext)
            else:
                return self.getTypedRuleContext(IdlParser.ItemContext,i)


        def getRuleIndex(self):
            return IdlParser.RULE_enum

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum" ):
                return visitor.visitEnum(self)
            else:
                return visitor.visitChildren(self)




    def enum(self):

        localctx = IdlParser.EnumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_enum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 121
                self.comment()


            self.state = 124
            self.identifier()
            self.state = 125
            self.match(IdlParser.ASSIGN)
            self.state = 126
            self.match(IdlParser.ENUM)
            self.state = 127
            self.match(IdlParser.LBRACE)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32 or _la==34:
                self.state = 128
                self.item()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(IdlParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(IdlParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(IdlParser.SEMI, 0)

        def comment(self):
            return self.getTypedRuleContext(IdlParser.CommentContext,0)


        def getRuleIndex(self):
            return IdlParser.RULE_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = IdlParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 136
                self.comment()


            self.state = 139
            self.identifier()
            self.state = 140
            self.match(IdlParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FlagsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(IdlParser.IdentifierContext,0)


        def ASSIGN(self):
            return self.getToken(IdlParser.ASSIGN, 0)

        def FLAGS(self):
            return self.getToken(IdlParser.FLAGS, 0)

        def LBRACE(self):
            return self.getToken(IdlParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(IdlParser.RBRACE, 0)

        def comment(self):
            return self.getTypedRuleContext(IdlParser.CommentContext,0)


        def flag(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IdlParser.FlagContext)
            else:
                return self.getTypedRuleContext(IdlParser.FlagContext,i)


        def getRuleIndex(self):
            return IdlParser.RULE_flags

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlags" ):
                return visitor.visitFlags(self)
            else:
                return visitor.visitChildren(self)




    def flags(self):

        localctx = IdlParser.FlagsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_flags)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 142
                self.comment()


            self.state = 145
            self.identifier()
            self.state = 146
            self.match(IdlParser.ASSIGN)
            self.state = 147
            self.match(IdlParser.FLAGS)
            self.state = 148
            self.match(IdlParser.LBRACE)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32 or _la==34:
                self.state = 149
                self.flag()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self.match(IdlParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FlagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(IdlParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(IdlParser.SEMI, 0)

        def comment(self):
            return self.getTypedRuleContext(IdlParser.CommentContext,0)


        def modifier(self):
            return self.getTypedRuleContext(IdlParser.ModifierContext,0)


        def getRuleIndex(self):
            return IdlParser.RULE_flag

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlag" ):
                return visitor.visitFlag(self)
            else:
                return visitor.visitChildren(self)




    def flag(self):

        localctx = IdlParser.FlagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_flag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 157
                self.comment()


            self.state = 160
            self.identifier()
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 161
                self.modifier()


            self.state = 164
            self.match(IdlParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(IdlParser.ASSIGN, 0)

        def ID(self):
            return self.getToken(IdlParser.ID, 0)

        def getRuleIndex(self):
            return IdlParser.RULE_modifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModifier" ):
                return visitor.visitModifier(self)
            else:
                return visitor.visitChildren(self)




    def modifier(self):

        localctx = IdlParser.ModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_modifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(IdlParser.ASSIGN)
            self.state = 167
            self.match(IdlParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(IdlParser.IdentifierContext,0)


        def ASSIGN(self):
            return self.getToken(IdlParser.ASSIGN, 0)

        def RECORD(self):
            return self.getToken(IdlParser.RECORD, 0)

        def targets(self):
            return self.getTypedRuleContext(IdlParser.TargetsContext,0)


        def LBRACE(self):
            return self.getToken(IdlParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(IdlParser.RBRACE, 0)

        def comment(self):
            return self.getTypedRuleContext(IdlParser.CommentContext,0)


        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IdlParser.FieldContext)
            else:
                return self.getTypedRuleContext(IdlParser.FieldContext,i)


        def deriving(self):
            return self.getTypedRuleContext(IdlParser.DerivingContext,0)


        def getRuleIndex(self):
            return IdlParser.RULE_record

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecord" ):
                return visitor.visitRecord(self)
            else:
                return visitor.visitChildren(self)




    def record(self):

        localctx = IdlParser.RecordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_record)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 169
                self.comment()


            self.state = 172
            self.identifier()
            self.state = 173
            self.match(IdlParser.ASSIGN)
            self.state = 174
            self.match(IdlParser.RECORD)
            self.state = 175
            self.targets()
            self.state = 176
            self.match(IdlParser.LBRACE)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32 or _la==34:
                self.state = 177
                self.field()
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 183
            self.match(IdlParser.RBRACE)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 184
                self.deriving()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(IdlParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(IdlParser.COLON, 0)

        def typeRef(self):
            return self.getTypedRuleContext(IdlParser.TypeRefContext,0)


        def SEMI(self):
            return self.getToken(IdlParser.SEMI, 0)

        def comment(self):
            return self.getTypedRuleContext(IdlParser.CommentContext,0)


        def getRuleIndex(self):
            return IdlParser.RULE_field

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField" ):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)




    def field(self):

        localctx = IdlParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 187
                self.comment()


            self.state = 190
            self.identifier()
            self.state = 191
            self.match(IdlParser.COLON)
            self.state = 192
            self.typeRef()
            self.state = 193
            self.match(IdlParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataType(self):
            return self.getTypedRuleContext(IdlParser.DataTypeContext,0)


        def function(self):
            return self.getTypedRuleContext(IdlParser.FunctionContext,0)


        def getRuleIndex(self):
            return IdlParser.RULE_typeRef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeRef" ):
                return visitor.visitTypeRef(self)
            else:
                return visitor.visitChildren(self)




    def typeRef(self):
